[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-gists-api"
version = "1.0.0"
description = "FastAPI service for GitHub Gists"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1", 
    "uvicorn[standard]==0.35.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "pytest-mock==3.14.1",
    "black==25.1.0",
    "pylint==3.3.6",
]

[project.scripts]
gists-api = "src.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "e2e: marks tests as end-to-end tests (may require network access)",
]
addopts = "-v --strict-markers"